Fix header spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -112,3 +112,7 @@ hr {
 	margin: 2em auto;
 	text-align: center;
 }
+
+h1, h2, h3, h4, h5 {
+	margin: 1em 0 .5em 0;
+}
